--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "next": "14.2.9",
+    "node-appwrite": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
